--- a/salaries-2023-05-07.md
+++ b/salaries-2023-05-07.md
@@ -3,7 +3,7 @@ title: Faculty salaries
 number: 1228
 tags: [Grinnell](index-grinnell), rants, data
 blurb:  Why do I care?
-version: 1.0.2
+version: 1.1.0
 released: 2023-05-07
 current: 2023-05-17
 ---
@@ -47,15 +47,15 @@ At the associate and assistant levels, Grinnell is doing appropriately well.  Th
 
 Unfortunately, our long-term trend of doing worse at the full-professor level continues.  Currently, we're eleventh at that level. Even if I assume that Oberlin's average salaries remained the same, we're still eleventh. Since we were tenth last year, and we've approximately doubled how far off the median we are in terms of salary, we're going in the wrong direction.
 
-There was also another question in the back of my head.  Last year, Faculty Chair Praitis negotiated a one-time 3% bonus for faculty and staff to compensate for the lack of raises in the first year of the pandemic [15].  I wondered whether they'd include that bonus in reporting our salaries. Doing so would make us look much better in our peer comparison group, but it would be a misleading comparison.  It's not that I suspected anyone of intentionally misleading us; it's that people sometimes forget about these things.  Fortunately, whoever reported our salaries appears to have used our contractual salaries, not the amount the College expected to pay us this year.  Yay!  I don't have to ask about it at the next faculty meeting.
+There was also another question in the back of my head.  Last year, Faculty Chair Praitis negotiated a one-time 3% bonus for faculty and staff to compensate for the lack of raises in the first year of the pandemic [16].  I wondered whether they'd include that bonus in reporting our salaries. Doing so would make us look much better in our peer comparison group, but it would be a misleading comparison.  It's not that I suspected anyone of intentionally misleading us; it's that people sometimes forget about these things.  Fortunately, whoever reported our salaries appears to have used our contractual salaries, not the amount the College expected to pay us this year.  Yay!  I don't have to ask about it at the next faculty meeting.
 
-That's all I have to report right now.  We should see the complete set of numbers at the next Faculty Meeting [16].
+That's all I have to report right now.  We should see the complete set of numbers at the next Faculty Meeting [17].
 
-In all honesty, the faculty receive excellent salaries at Grinnell.  And, as I've said before, it's also important to see the College addressing the too-low staff salaries [17].  There's a lot to do.  Grinnell should also ensure that both faculty and staff get at least cost-of-living increases and that the staff pool is about the same as the faculty raise pool, at least in terms of percentages [18].  Let's make those salary goals, too.  And let's work hard to meet those new goals, as well as the old faculty median salary goals.
+In all honesty, the faculty receive excellent salaries at Grinnell.  And, as I've said before, it's also important to see the College addressing the too-low staff salaries [18].  There's a lot to do.  Grinnell should also ensure that both faculty and staff get at least cost-of-living increases and that the staff pool is about the same as the faculty raise pool, at least in terms of percentages [19].  Let's make those salary goals, too.  And let's work hard to meet those new goals, as well as the old faculty median salary goals.
 
 ---
 
-**_Postscript_**: Among the salary issues missing from the main body of the musing is the question of salary inversions.  A salary inversion is when a new hire makes more than existing faculty.  I had thought our policy was to raise the existing faculty member's salary to match the new salary; that's what I experienced when we hired new faculty in my fifth-or-so and eighth-or-so years at Grinnell [20].  But I think I heard the Dean say last year that addressing salary inversions is no longer automatic.  It should be.
+**_Postscript_**: Among the salary issues missing from the main body of the musing is the question of salary inversions.  A salary inversion is when a new hire makes more than existing faculty.  I had thought our policy was to raise the existing faculty member's salary to match the new salary; that's what I experienced when we hired new faculty in my fifth-or-so and eighth-or-so years at Grinnell [21].  But I think I heard the Dean say last year that addressing salary inversions is no longer automatic.  It should be.
 
 ---
 
@@ -87,16 +87,18 @@ In all honesty, the faculty receive excellent salaries at Grinnell.  And, as I'v
 
 [12] The faculty appreciate Kathy Kamp's efforts to get the trustees to agree to that as a target.  Kathy also got us salary bumps upon promotion.
 
-[14] "median average salary of peers", not "average median salary of peers".  Order matters.
+[14] "median average salary of peers", not "average median salary of peers".  Order matters [15].
 
-[15] Only for those employed at Grinnell at the start of the pandemic and still employed at Grinnell in spring 2023.
+[15] One of my readers asked "How different are the numbers?"  I know not.  We only get average peer salaries.  Since we have some fairly low outliers, I'd imagine that the average median is lower than the median average.
 
-[16] I'm sure that Clark appreciates that.
+[16] Only for those employed at Grinnell at the start of the pandemic and still employed at Grinnell in spring 2023.
 
-[17] That's a hint to the trustees who read my musings.  We have wonderful staff at Grinnell.  Let's compensate them better.  Why should we rely primarily on regional salaries as the comparison metrics for these amazing people?
+[17] I'm sure that Clark appreciates that.
 
-[18] For example, if we set the faculty raise pool at 4.5% of the faculty salary budget line [19], we should set the staff raise pool at about 4.5% of the staff salary budget line.
+[18] That's a hint to the trustees who read my musings.  We have wonderful staff at Grinnell.  Let's compensate them better.  Why should we rely primarily on regional salaries as the comparison metrics for these amazing people?
 
-[19] I'm an optimist.
+[19] For example, if we set the faculty raise pool at 4.5% of the faculty salary budget line [20], we should set the staff raise pool at about 4.5% of the staff salary budget line.
 
-[20] Does it bother me that a new assistant professor was hired at more than I was making as an associate professor?  Yes, a bit.
+[20] I'm an optimist.
+
+[21] Does it bother me that a new assistant professor was hired at more than I was making as an associate professor?  Yes, a bit.
