Fix dates on latest musing.

--- a/michelle-2023-12-03.md
+++ b/michelle-2023-12-03.md
@@ -3,9 +3,9 @@ title: Happy birthday, Love!
 number: 1259
 tags: [Autobiographical](index-autobiographical)
 blurb: "My gift is my 'blog, and this one's for you."
-version: 1.0
+version: 1.0.1
 released: 2023-12-03
-current: 
+current: 2023-12-03
 ---
 Today is Michelle's birthday [1]. She's 59. I don't quite understand how that works since her mother was always 29. But I guess that's how things go. Let's start with the most important thing, the good wishes!
 
@@ -41,7 +41,7 @@ I am so fortunate to be married to this remarkable woman. And people are fortuna
 
 [2] Is it an arranged marriage if your mutual friends arrange it?
 
-[3] We were unofficially engaged on 18 January 1996. Neither Michelle nor I remember exactly when we were officially engaged [4]. We got married on 29 August 1997 [5].
+[3] We were unofficially engaged on 18 January 1986. Neither Michelle nor I remember exactly when we were officially engaged [4]. We got married on 29 August 1987 [5].
 
 [4] I was worried that this was a special date that I'd forgotten. I feel a bit better that she's forgotten, too.
 
