Add a new index for 207 musings.

--- a/csc-207-2024fa.md
+++ b/csc-207-2024fa.md
@@ -1,11 +1,11 @@
 ---
 title: Planning updates for CSC-207 in Fall 2024
 number: 1298
-tags: [Teaching](index-teaching)
+tags: [CSC-207](index-csc207), [Teaching](index-teaching)
 blurb: How many changes should I make?
-version: 1.0
+version: 1.0.1
 released: 2024-08-11
-current: 
+current: 2024-08-23
 ---
 _I started this musing at the end of May. As I mentioned [recently](three-weeks-to-go-2024-08-08), many things fell to the side over the summer. With less than three weeks to go, it's almost certainly time to finish._
 
