--- a/brain-fog-2024-09-25.md
+++ b/brain-fog-2024-09-25.md
@@ -7,17 +7,17 @@ version: 1.0
 released: 2024-09-25
 current: 
 ---
-_Today we take a break from Sam whining about his personal life to hear (read) Sam whine about his professional life._
+_Today, we take a break from Sam whining about his personal life to hear (read) Sam whine about his professional life._
 
-One of the many commitments I made this semester was to provide my CSC-207 students with reasonable sets of unit tests for each homework assignment ("mini-project", in course parlance). I'd rather students know about potential issues in their assignments before they turn them in for grading, rather than after they have them graded. That way, they can fix them before turning them in, and everyone's job is easier.
+One of the many commitments I made this semester was to provide my CSC-207 students with reasonable sets of unit tests for each homework assignment ("mini-project", in course parlance). I'd rather students know about potential issues in their assignments before they turn them in for grading rather than after they have them graded. That way, they can fix them before turning them in, and everyone's job is easier.
 
-Unfortunately, writing unit tests remains a non-trivial task. At larger institutions, faculty probably dump the task on their teaching assistants. My mentors don't really have the time to do so. I'll admit that I also don't necessarily trust others to write tests. I am, after all, a control freak.
+Unfortunately, writing unit tests remains a non-trivial task. At larger institutions, faculty probably dump the task on their teaching assistants. My mentors don't really have the time to do so. I must admit that I also don't necessarily trust others to write tests. I am, after all, a control freak.
 
-I've already spent more than a day writing unit tests for our latest mini-project. Today, I'm on tests for the final method, `eqv`. Students are building structures (somewhat like graphical UIs, but with ASCII). We are considering three types of equality: "two things look the same" (`equal`), "two things were built in essentially the same way" (`eqv`), and "two things occupy the same memory location (`eq`). I've provided students with `equal` and `eq` and have asked them to write `eqv`, which is the hardest of the three.
+I had already spent more than a day writing unit tests for our latest mini-project. Today, I was working on additional tests for the `eqv` method. Students are building structures (somewhat like graphical UI structures, but with ASCII). We are considering three types of equality of such structures: "two things look the same" (`equal`), "two things were built in essentially the same way" (`eqv`), and "two things occupy the same memory location (`eq`). I've provided students with `equal` and `eq`, and I've asked them to write `eqv`, possibly the hardest of the three.
 
-To test their code, I'm making a lot of objects that all look the same, but are constructed differently. Sometimes the construction is very similar. Sometimes it's very different.
+To test their code, I'm making a lot of objects that all look the same but are constructed differently. Sometimes, that construction is very similar. Sometimes it's very different.
 
-Here's a method I'd written that compares "grids" that are build in different ways. _Warning! Horrid code follows!_
+Here's a method I'd written that compares "grids" that are built in different ways. _Warning! Horrid code follows!_
 
 ```java
   /**
@@ -78,7 +78,7 @@ Here's a method I'd written that compares "grids" that are build in different wa
 
 Isn't that long and repetitious?
 
-For something different yet similar, let's look at the code for comparing rectangles to horizontal compositions. Once again, every shape I make looks the same, but is constructed differently. There's only one kind of rectangle (`exesRect0a`) and seven kinds of horizontal compositions (`exesHComp0a` through `exesHComp6a`), at least right now.  _Warning! More horrid code follows._
+For something different yet similar, let's look at the code for comparing rectangles to horizontal compositions. Once again, every shape I make looks the same but is constructed differently. There's only one kind of rectangle (`exesRect0a`) and seven kinds of horizontal compositions (`exesHComp0a` through `exesHComp6a`), at least right now. _Warning! More horrid code follows._
 
 ```java
   /**
@@ -118,13 +118,13 @@ For something different yet similar, let's look at the code for comparing rectan
   } // exesRectVsHComp()
 ```
 
-I was about to start writing the incredibly similar "compare grids to horizontal compositions", which involves four kinds of grids and seven kinds of horizontal compositions, and realized that I was, once again, copying, pasting, and changing large chunks of code. And, as I tell my students, **If you are programming with copy, paste, and change, you should find something better.** 
+I was about to start writing the incredibly similar "compare grids to horizontal compositions"---which involves four kinds of grids and seven kinds of horizontal compositions---and realized that I was, once again, copying, pasting, and changing large chunks of code. And, as I tell my students, **If you are programming with copy, paste, and change, you should find something better.** 
 
-I'm an experienced enough programmer that I should have started with something better. However, it appears that I'm in a bit of a brain freeze. So I wrote bad code to start with. But I eventually realized I needed to clean it up, and did so before I wrote too much bad code.
+I'm an experienced enough programmer that I should have started with something better. However, it seems I'm experiencing some brain fog. So I began by writing bad code. Fortunately, I eventually realized I needed to clean it up, and I did so before I wrote too much bad code.
 
-What are the fixes? First, when there are bunch of related things, you should put them in an array. I put all the `exesGrid#a` objects in one array (`exesGridsA`) and all the `exesGrid#b` objects in another (`exesGridsB`). I did something similar for the other types.
+What are the fixes? First, when dealing with many related values, you should put them in an array. I put all the `exesGrid#a` objects (e.g., `exesGrid2a`) in one array (`exesGridsA`) and all the `exesGrid#b` objects in another (`exesGridsB`). I did something similar for the other types.
 
-Second, you should then write for loops to deal with the pairs of objects. Here are the two methods I wrote. (Hopefully, I got them right.) The first compares different objects of the same type.
+Second, you should then write for loops to deal with the pairs of objects. If possible, you should also put those loops in separate methods. (Looping and functions/methods are two of the most common ways to avoid repetitive code.) Here are the two methods I wrote. Hopefully, I got them right. The first compares different objects of the same type.
 
 ```java
   /**
@@ -223,12 +223,12 @@ something much shorter.
 
 I could even write a loop of calls to `exesCompareDifferent`, using an array of arrays to loop through. But that seems like a bit of overkill. I like seeing separate tests for different pairings.
 
-There are also other benefits to this approach. Most importantly, if I decided to add an eighth kind of horizontal composition, I would only need to make one or two changes in the program: adding an element to `exesHCompsA` (as well as an `exesHCompsB` that I haven't mentioned yet). No need to search my code for other lines to add! ("Let's see ... everywhere I mention `exesHComp6a`, I should add a similar assertion for `exesHZComp7a` ....") Making additional examples  easy to add encourages more testing (or at least doesn't discourage more testing), and more testing is generallly good (within limits).
+There are also other benefits to this approach. Most importantly, if I decided to add an eighth kind of horizontal composition, I would only need to make one or two changes in the program: adding an element to `exesHCompsA` (as well as an `exesHCompsB` that I haven't mentioned yet). No need to search my code for other lines to add! ("Let's see ... everywhere I mention `exesHComp6a`, I should add a similar assertion for `exesHZComp7a` ....") Making additional examples easy to add encourages more testing (or at least doesn't discourage more testing), and more testing is generally good (within limits). In fact, while "testing the tests", as it were, by writing "nearly correct" code, I discovered a few more cases to add.
 
-In addition, if we suddenly added a new type to our project, it wouldn't take me long to add tests for that type. Otherwise, I'd been doing a lot of copying and pasting and changing.
+In addition, if we suddenly added a new type to our project, it wouldn't take me long to add tests for that type. Without the general methods, I'd be spending time repeatedly copying and pasting and changing.
 
-The new approach also cuts the number of lines in the program. That makes the program more readable. And it reminds us that "lines per hour" is a bad way to measure programmer productivity; sometimes the best code (or even just decent code) cuts the number of lines, rather than increasing them.
+The new approach also cuts the number of lines in the program. That makes the program more readable. It also reminds us that "lines per hour" is a bad way to measure programmer productivity; sometimes the best code (or even just decent code) cuts the number of lines, rather than increasing them.
 
-There is, however, a significant difficulty in implementing this approach. When we've written separate assertions for each pairing it's easy to tell which pair of values failed the test. If we weren't carefully, we'd just see a report that we failed on one of the pairs, but be unable to tell which one. That would be sad. As you may be able to tell, I spent a bit of extra effort ensuring that the error message in the assertion makes it clear which pair we have to consider.
+There is, however, a significant difficulty in implementing this approach. When we've written separate assertions for each pairing it's easy to tell which pair of values failed the test. If we weren't careful to generate good messages, we'd just see a report that we failed on one of the pairs, but be unable to tell which one. That would be sad. As you may be able to tell, I spent a bit of extra effort ensuring that the error message in the assertion makes it clear which pair we have to consider. That approach makes it necessary that I follow some (undocumented) naming conventions that I was already following.
 
 I think that's it for now. Do I still have brain fog? Almost certainly. In fact, I just typed "brain bog". But I'm glad that I still have enough ability to peer through the fog that I can remember how to fix things. I just wish that "fog" didn't look like "the composition of f and g".
