--- a/socks-2024-12-14.md
+++ b/socks-2024-12-14.md
@@ -1,7 +1,7 @@
 ---
 title: Socks
 number: 1319
-tags: [Michelle](index-michelle)
+tags: [Michelle](index-michelle), short, sad
 blurb: Another sad musing.
 version: 1.0
 released: 2024-12-14
