Fix minor typo.

--- a/socks-2024-12-14.md
+++ b/socks-2024-12-14.md
@@ -3,7 +3,7 @@ title: Socks
 number: 1319
 tags: [Michelle](index-michelle), short, sad
 blurb: Another sad musing.
-version: 1.0
+version: 1.0.1
 released: 2024-12-14
 current: 
 ---
@@ -39,7 +39,7 @@ But ...
 
 ---
 
-**_Postscript_**: I suppose I also subconsciously considered the issue of a sock without it's mate. I don't want to dig too deeply into that concept.
+**_Postscript_**: I suppose I also subconsciously considered the issue of a sock without its mate. I don't want to dig too deeply into that concept.
 
 ---
 
