Add 1332: Rant on QR codes.

--- a/qrcodes-2025-02-04.md
+++ b/qrcodes-2025-02-04.md
@@ -1,36 +1,39 @@
 ---
 title: QR codes
 number: 1332
-tags: [Rants](index-rants)
+tags: [Rants](index-rants), short
 blurb: Why?
-version: 0.9
+version: 1.0
 released: 2025-02-04
 current: 
 ---
-Recently, I noticed what seems to be a proliferation of QR Codes on posters on campus. Want to report an accessibility issues? Here's a QR Code. If you're coming to this event, please RSVP at this QR Code. Need more information? Go to this QR Code.
+Recently, I noticed what seems to be a proliferation of QR Codes on posters on campus. Want to report an accessibility issue? Here's a QR Code. If you're coming to this event, please RSVP using this QR Code. Need more information? Go to this QR Code.
 
 I get that QR Codes can make things easier. Point your phone, click a button, and, magically, you're at a Web site. Is it a safe Web site? Don't worry; you can trust us!
 
-But here's the thing. Not everyone has a smart phone. And not everyone with a smart phone wants to go to your Web site when they see the sign. Some of us like to take photos of things and come back to them later. Or maybe we want to write something down [1]. Or maybe we got the poster in an email. How are we supposed to follow a QR Code from a PDF? [2]
+But here's the thing. Not everyone has a smartphone. And not everyone with a smartphone wants to go to your Web site when they see the sign. Some of us like to take photos of things and return to them later. Or maybe we want to write something down [1]. Or perhaps we got the poster in an email. How are we supposed to follow a QR Code from a PDF? [2]
 
-It used to be that most people accompanied a QR code with a URL [2], often a shortened URL created with bit.ly or tinyurl. But that practice seems to have stopped, at least at Grinnell.
+It used to be that most people accompanied a QR code with a URL [2], often a shortened URL created with bit.ly or TinyURL. But that practice seems to have stopped, at least at Grinnell. Now, most posters just have the QR code.
 
-_Is it that hard to add a URL to your poster?_ [3]
+_Is it that hard to add a URL to your poster?_ [4]
 
-If you include a URL, particularly a shortened URL, you support members of your audience who don't have smart phones (or don't have smart phones with them), people who don't want to follow the URL or fill out a form right now, and a host of others.
+If you include a URL, particularly a shortened URL, you support members of your audience who don't have smartphones (or don't have smartphones with them at the present moment), people who don't want to follow the URL or fill out a form right now, and a host of others.
 
-I assume that QR codes also present an accessibility issue; a screen reader can't read them. At least I don't think one can.
+I assume that QR codes also present an accessibility issue; a screen reader can't read them—at least, I don't think one can.
 
 Go ahead and continue to use QR codes. But design universally! _Include a link, too!_
 
+Please!
 ---
 
-**_Postscript_**: I said that follow QR-coded URLs had some risks. I'll note that following link-shortened URLs also has risks. At least you can do that in a private browser window or something similar.
+**_Postscript_**: I said that following QR-coded URLs had some risks. I'll note that link-shortened URLs also have risks. At least you can follow such URLs in a private browser window or something similar.
 
 ---
 
 [1] Do people still write things down?
 
-[2] Is it "a URL" ("a you are ell") or "an URL" ("an earl")? I prefer the former, but I can understand those who prefer the brevity of the latter.
+[2] Is it "a URL" ("a you are ell") or "an URL" ("an earl")? I prefer the former, but I can understand those who prefer the brevity of the latter [3].
 
-[3] My edited version of "Is it that hard to add a friggin' URL to your damn poster?"
+[3] Grammarly tells me that "the latter's brevity" would better exhibit brevity.
+
+[4] My edited version of "Is it that hard to add a friggin' URL to your damn poster?"
