Minor updates to bagels.

--- a/bagels-2025-02-09.md
+++ b/bagels-2025-02-09.md
@@ -3,7 +3,7 @@ title: Making bagels
 number: 1335
 tags: [Miscellaneous](index-misc)
 blurb: A family tradition.
-version: 0.8
+version: 0.8.1
 released: 2025-02-09
 current: 2025-02-09
 ---
@@ -56,7 +56,7 @@ Also: What happened to making ropes? Where are the eggs? The oil? _Where is the 
 
 Nonetheless, I must admit that his bagels were yummy. Really yummy. Eldest called these bagels, along with lox, cream cheese, tomatoes, red onions, and such, "Happiness sandwiches". I know what he means.
 
-This weekend, I decided I'd try to make some myself. We're headed to a Super Bowl party, and I wanted to bring something. Why bagels? Ask my muse. She [7] inspires me to do more than muse. I wanted to make enough to share. So I asked. "How much water would you use for ten pounds of flour?" Of course, he had no idea. However, we were able to approximate by referring to [a recipe from King Arthur flour](https://www.kingarthurbaking.com/recipes/martins-bagels-recipe) by Martin Philip. It bears some similarities to my son's, but also has some key differences, such as how long you rest the mix ("poolish", in Philip's terms) and how the dough should feel ("cohesive, shaggy, tacky mess; resist the urge to add more flout").
+This weekend, I decided I'd try to make some myself. We're headed to a Super Bowl party, and I wanted to bring something. Why bagels? Ask my muse. She [7] inspires me to do more than muse. I wanted to make enough to share. So I asked. "How much water would you use for ten pounds of flour?" Of course, he had no idea. However, we were able to approximate by referring to [a recipe from King Arthur flour](https://www.kingarthurbaking.com/recipes/martins-bagels-recipe) by Martin Philip. It bears some similarities to my son's, but also has some key differences, such as how long you rest the mix ("poolish", in Philip's terms),how the dough should feel ("cohesive, shaggy, tacky mess; resist the urge to add more flour" vs Middle's "add as much flour as possible"), and the temperature (475 vs Middle's 350).
 
 I was still going to use potato water. Feed the yeast appropriately! Unfortunately, we didn't have any potatoes in the house. And, at the time when I was making the mix, I wasn't really in the mood to go out shopping. So, no potato water. I found some potato starch; hopefully, it achieves the same goals.
 
